--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,6 +3,7 @@ name: Build
 on:
   push:
     branches: [main, master]
+    tags: ['v*']
   pull_request:
     branches: [main, master]
   workflow_dispatch:
@@ -30,3 +31,21 @@ jobs:
         with:
           name: nadaesinclick
           path: build/bin/Release/nadaesinclick.exe
+
+      - name: Create zip for release
+        if: startsWith(github.ref, 'refs/tags/')
+        run: Compress-Archive -Path build/bin/Release/nadaesinclick.exe -DestinationPath nadaesinclick-${{ github.ref_name }}.zip
+
+      - name: Create Release
+        if: startsWith(github.ref, 'refs/tags/')
+        uses: softprops/action-gh-release@v1
+        with:
+          files: nadaesinclick-${{ github.ref_name }}.zip
+          body: |
+            ## 나대신클릭 ${{ github.ref_name }}
+
+            마우스 클릭과 키보드 입력을 자동으로 반복해주는 Windows 프로그램입니다.
+            게임이나 반복 작업 시 손가락 피로를 줄여줍니다.
+
+            ### 설치
+            nadaesinclick-${{ github.ref_name }}.zip을 다운로드하여 압축을 풀고 실행하세요.
