--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,18 +31,18 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: nadaesinclick
-          path: build/bin/Release/nadaesinclick.exe
+          name: na-daesin-click
+          path: build/bin/Release/na-daesin-click.exe
 
       - name: Create zip for release
         if: startsWith(github.ref, 'refs/tags/')
-        run: Compress-Archive -Path build/bin/Release/nadaesinclick.exe -DestinationPath nadaesinclick-${{ github.ref_name }}.zip
+        run: Compress-Archive -Path build/bin/Release/na-daesin-click.exe -DestinationPath na-daesin-click-${{ github.ref_name }}.zip
 
       - name: Create Release
         if: startsWith(github.ref, 'refs/tags/')
         uses: softprops/action-gh-release@v1
         with:
-          files: nadaesinclick-${{ github.ref_name }}.zip
+          files: na-daesin-click-${{ github.ref_name }}.zip
           body: |
             ## 나대신클릭 ${{ github.ref_name }}
 
@@ -50,4 +50,4 @@ jobs:
             게임이나 반복 작업 시 손가락 피로를 줄여줍니다.
 
             ### 설치
-            nadaesinclick-${{ github.ref_name }}.zip을 다운로드하여 압축을 풀고 실행하세요.
+            na-daesin-click-${{ github.ref_name }}.zip을 다운로드하여 압축을 풀고 실행하세요.
